# Pac-Man-horror

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.h  resources.qrc  Адашкевич.txt
Controller/: controller.cpp  controller.h
GraphicsOgjects/: GraphicsCoin.cpp  GraphicsCoin.h  GraphicsField.cpp  GraphicsField.h  GraphicsGhost.cpp  GraphicsGhost.h  Pac-Man.cpp  Pac-Man.h  score.h
Level/: bot.cpp  bot.h  fieldF.cpp  fieldF.h  field_generator.cpp  field_generator.h  hero.cpp  hero.h  level.cpp  level.h  level_field.cpp  level_field.h  level_graph.cpp  level_graph.h
View/: scene.cpp  scene.h  view.cpp  view.h
rays/: CMakeLists.txt  controller.cpp  controller.h  controllerRays.cpp  controllerRays.h  graphics_polygon.cpp  graphics_polygon.h  main.cpp  main_window.cpp  main_window.h  my_scene.cpp  my_scene.h  my_view.cpp  my_view.h  old_code  polygon.cpp  polygon.h  ray.cpp  ray.h  tests.cpp
